...

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/view_pager2"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
...
            app:behavior_peekHeight="0dp"
            app:layout_behavior="@string/bottom_sheet_behavior"
            app:layout_constraintTop_toBottomOf="@id/btnOpen"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/view_pager2"
            app:layout_anchorGravity="bottom|right|end"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/container_bsd"
...
