...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/spinnerPriority"
            app:layout_constraintBottom_toBottomOf="@id/btnSave">

            <RadioButton
                android:id="@+id/rbtnTypeOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
...
